--- a/Docker/ClusterKitMonitoring/clusterkit-web/src/containers/App/App.css
+++ b/Docker/ClusterKitMonitoring/clusterkit-web/src/containers/App/App.css
@@ -3,3 +3,16 @@
     height: calc(100vh - 50px);
     /*width: 100vw;*/
 }
+
+.topLogo {
+    position: absolute;
+    top: 5px;
+
+    background: url('./images/logo.png') #F8F7F7 no-repeat center center;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-size: 80%;
+    margin: 0 0 0 -45px;
+    border-radius: 20px;
+}
