--- a/Docker/ClusterKitMonitoring/clusterkit-web/src/containers/GraphQL/style.css
+++ b/Docker/ClusterKitMonitoring/clusterkit-web/src/containers/GraphQL/style.css
@@ -1,5 +1,9 @@
 .graphiql-container {
     margin-top: -19px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    height: calc(100% - 55px);
 }
 
 .graphiql-container .doc-explorer-title {
