Adds additional controls of release workflow in UX: rollback, set stable, set obsolete

--- a/Docker/ClusterKitMonitoring/clusterkit-web/src/components/Form/styles.css
+++ b/Docker/ClusterKitMonitoring/clusterkit-web/src/components/Form/styles.css
@@ -5,3 +5,16 @@
 .btn-margined {
   margin-left: 10px;
 }
+
+.row-text {
+  margin-top: 7px;
+  margin-bottom: 0;
+}
+
+.modal {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.static-modal-center .modal-dialog {
+  margin-top: calc(50% - 200px);
+}
